AJUSTES EN MANEJO DE PERMISOS Y LOGICA DE LA BASE DE DATOS